checkpoint: hand roll handlers and req building