@@ -1,6 +1,7 @@
 (ns build
   (:require
    [clojure.java.io :as io]
+   [clojure.java.shell :as shell]
    [clojure.tools.build.api :as b]
    [clojure.string :as str]))
 
@@ -12,157 +13,24 @@
 (defn clean [_]
   (b/delete {:path "target"}))
 
-(defn system-includes
-  "Get system include paths from gcc or clang."
-  []
-  (let [flags {:clang '("-E" "-v" "-xc" "/dev/null")
-               :gcc '("-E" "-Wp,-v" "-xc" "/dev/null")}
-        has-gcc? (= 0 (:exit (b/process {:command-args ["which" "gcc"]
-                                         :out :ignore
-                                         :err :ignore})))
-        compiler-cmd (or (System/getenv "CC")
-                         (if has-gcc? "gcc" "clang"))
-        compiler (if (str/includes? compiler-cmd "clang") :clang :gcc)
-        cmd (conj (get flags compiler)
-                  compiler-cmd)
-        {:keys [err out exit]} (b/process {:command-args cmd
-                                           :out :capture
-                                           :err :capture})]
-    (if (zero? exit)
-      (let [output (str err out)]
-        (if (= :clang compiler)
-          (let [all-text (str/join " " (str/split-lines output))]
-            (->> (re-seq #"(?:-isystem|-idirafter|-internal-isystem)\s+([^\s]+)" all-text)
-                 (map second)
-                 distinct
-                 vec))
-          (-> output
-              str/split-lines
-              (->> (drop-while #(not= % "#include <...> search starts here:"))
-                   (drop 1)
-                   (take-while #(not= % "End of search list."))
-                   (map str/trim)
-                   vec))))
-      (throw (ex-info "Failed to find system includes"
-                      {:command-was (str/join " " cmd)
-                       :compiler compiler-cmd
-                       :out out
-                       :err err
-                       :exit exit})))))
-
-(defn h2o-include-dir
-  "Find h2o.h include directory from CMAKE_INCLUDE_PATH."
-  []
-  (let [cmake-path (System/getenv "CMAKE_INCLUDE_PATH")]
-    (when-not cmake-path
-      (throw (ex-info "CMAKE_INCLUDE_PATH not set" {})))
-    (let [paths (str/split cmake-path #":")]
-      (or (some #(when (.exists (io/file % "h2o.h")) %) paths)
-          (throw (ex-info "h2o.h not found in CMAKE_INCLUDE_PATH"
-                          {:cmake-include-path cmake-path}))))))
-
-(defn -jextract
-  "Run jextract with given args."
-  [{:keys [args]}]
-  (let [cmd (concat ["./jextract/jextract-22/bin/jextract"] args)
-        {:keys [out exit err] :as ret} (b/process {:command-args cmd
-                                                   :out :capture
-                                                   :err :capture})]
-    (when-not (zero? exit)
-      (println "JEXTRACT STDOUT:" out)
-      (println "JEXTRACT STDERR:" err)
-      (throw (ex-info "jextract failed"
-                      {:command-was (str/join " " cmd)
-                       :out out
-                       :err err
-                       :exit exit})))
-    ret))
-
-(defn include-headers
-  "Generate --include-dir args for jextract from directory paths."
-  [dirs]
-  (mapcat (fn [d] ["--include-dir" d]) dirs))
-
-(defn include-structs
-  "Generate --include-struct args for jextract from struct names."
-  [structs]
-  (mapcat (fn [s] ["--include-struct" s]) structs))
-
-(defn include-typedefs
-  "Generate --include-typedef args for jextract from typedef names."
-  [typedefs]
-  (mapcat (fn [t] ["--include-typedef" t]) typedefs))
-
-(defn jextract-h2o
-  "Generate Java bindings for h2o structs using jextract.
-   Only generates specific structs to reduce generated code size."
+(defn compile-shim
+  "Compile C shim library using CMake."
   [_]
-  (println "Generating Java bindings from h2o headers...")
-  (b/delete {:path "target/jextract"})
+  (println "Compiling C shim library...")
+  (let [mkdir-result (shell/sh "mkdir" "-p" "cmake-build-debug")
+        _ (when (not= 0 (:exit mkdir-result))
+            (throw (ex-info "Failed to create cmake-build-debug directory" mkdir-result)))
+        cmake-result (shell/sh "cmake" "-DCMAKE_BUILD_TYPE=Debug" "-B" "cmake-build-debug")
+        _ (when (not= 0 (:exit cmake-result))
+            (println (:err cmake-result))
+            (throw (ex-info "CMake configuration failed" cmake-result)))
+        build-result (shell/sh "cmake" "--build" "cmake-build-debug" "--config" "Debug" "--target" "h2oclj")]
+    (when (not= 0 (:exit build-result))
+      (println (:err build-result))
+      (throw (ex-info "CMake build failed" build-result)))
+    (println "Compiled C shim to cmake-build-debug/libh2oclj.so")))
 
-  (let [h2o-include (h2o-include-dir)
-        include-args (include-headers (conj (system-includes) h2o-include))
-        structs (include-structs ["st_h2o_req_t"
-                                  "st_h2o_res_t"
-                                  "st_h2o_iovec_t"
-                                  "st_h2o_header_t"
-                                  "st_h2o_header_flags_t"
-                                  "st_h2o_timestamp_t"
-                                  "timeval"
-                                  "st_h2o_handler_t"
-                                  "st_h2o_socket_t"
-                                  "st_ptls_log_conn_state_t"
-                                  "st_ptls_log_state_t"
-                                  "in6_addr"
-                                  "st_h2o_httpclient_timings_t"
-                                  "st_h2o_httpclient_conn_properties_t"
-                                  "st_h2o_timerwheel_entry_t"
-                                  "st_h2o_mem_pool_t"
-                                  "st_h2o_linklist_t"
-                                  "st_h2o_globalconf_t"
-                                  "st_h2o_socket_latency_optimization_conditions_t"
-                                  "st_h2o_socketpool_t"
-                                  "st_h2o_context_t"
-                                  "st_h2o_multithread_receiver_t"
-                                  "st_quicly_cid_plaintext_t"
-                                  "st_h2o_httpclient_ctx_t"
-                                  "st_h2o_httpclient_connection_pool_t"
-                                  "st_h2o_quic_stats_t"
-                                  "st_h2o_httpclient_protocol_ratio_t"
-                                  "st_h2o_accept_ctx_t"
-                                  "st_h2o_evloop_t"
-                                  "st_h2o_sliding_counter_t"])
-        typedefs (include-typedefs ["h2o_headers_t"
-                                    "h2o_socket_t"
-                                    "h2o_handler_t"
-                                    "h2o_req_t"
-                                    "h2o_res_t"
-                                    "h2o_iovec_vector_t"
-                                    "h2o_globalconf_t"
-                                    "h2o_context_t"
-                                    "h2o_accept_ctx_t"
-                                    "h2o_evloop_t"])
-        args (concat include-args
-                     structs
-                     typedefs
-                     ["--output" "target/jextract"
-                      "--target-package" "net.example.h2o"
-                      (str h2o-include "/h2o.h")])]
-    (-jextract {:args args})
-    (println "Generated Java bindings in target/jextract")))
-
-(defn compile-jextract
-  "Compile jextract-generated Java sources and custom Java sources."
-  [_]
-  (println "Compiling jextract-generated Java...")
-  (b/javac {:src-dirs ["target/jextract" "src/main/java"]
-            :class-dir class-dir
-            :basis @basis
-            :javac-opts ["--release" "25" "--enable-preview"]})
-  (println "Compiled Java classes to" class-dir))
-
-(defn build-all
-  "Run jextract and compile Java."
+(defn compile
+  "Run complete build: compile shim."
   [opts]
-  (jextract-h2o opts)
-  (compile-jextract opts))
+  (compile-shim opts))
